<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CadastroJogoActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/rlFotoJogo"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
       >
        
        <ImageView
            android:id="@+id/imageViewFotoJogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/holo_blue_light"
            android:src="@drawable/ic_insert_photo_black_24dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_insert_photo_black_24dp"/>

    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rlFotoJogo"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutNomeDoJogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/editTextNomeDojogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/nome_do_jogo"
                android:inputType="textCapWords"/>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutProdutoraDoJogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TextInputLayoutNomeDoJogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editTextProdutoraDoJogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/produtora_do_jogo"
                android:inputType="textCapWords"/>



        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textViewConsole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/console"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextInputLayoutProdutoraDoJogo"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/spinnerConsole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/textViewConsole"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:entries="@array/consoles"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:id="@+id/textViewNotaDoJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota_do_jogo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerConsole"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <RatingBar
            android:id="@+id/ratingbarNotaJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="5"
            android:stepSize="0.5"
            app:layout_constraintTop_toBottomOf="@id/textViewNotaDoJogo"
            app:layout_constraintRight_toRightOf="parent"
            style="?android:attr/ratingBarStyleIndicator"/>
        
        <CheckBox
            android:id="@+id/checkboxZerado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="@id/ratingbarNotaJogo"
            android:text="@string/zerado"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>